# tablex

./: .all-contributorsrc  .dockerignore  .eslintrc.json  .gitignore  .gitmodules  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc.json  .release-it.json  Cargo.toml  Dockerfile  LICENSE  README.md  bun.lockb  docker-compose.yml  env.d.ts  next.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.base.json  tsconfig.json
.cargo/: config.toml
.changeset/: afraid-chefs-protect.md  bright-games-try.md  chilled-windows-explode.md  chilly-cherries-flow.md  clever-pillows-tickle.md  config.json  cool-terms-deny.md  cyan-lobsters-float.md  cyan-timers-float.md  early-deers-act.md  few-eggs-behave.md  fresh-grapes-mate.md  friendly-knives-retire.md  friendly-students-marry.md  great-buttons-sit.md  grumpy-tips-push.md  hungry-kangaroos-pull.md  khaki-peas-scream.md  late-trains-grow.md  lazy-years-destroy.md  loud-drinks-tell.md  many-flowers-call.md  many-toys-press.md  modern-deers-grab.md  rare-islands-cheer.md  six-seas-clap.md  small-icons-repeat.md  sour-swans-eat.md  spicy-cooks-change.md  strange-knives-burn.md  strong-fireants-sort.md  strong-lizards-join.md  tall-wasps-type.md  thin-nails-sparkle.md  tricky-frogs-sell.md  tricky-pillows-join.md  tricky-poems-fold.md  warm-ladybugs-exist.md  wise-kangaroos-fix.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-node-pnpm/: action.yml
.github/workflows/: astro-build-status.yml  changeset.yml  code-quality.yml  lint.yml  pr-quality.yml  release.yml  tauri-build-status.yml  test-astro.yml  test-build.yml  test-tauri.yml  test-vite.yml
.husky/: commit-msg  pre-commit
.zed/: settings.json
apps/core/: .eslintrc.cjs  .eslintrc.json  .gitignore  CHANGELOG.md  components.json  env.d.ts  eslint.config.mjs  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/core/src/: bindings.ts  env.d.ts  index.css  main.tsx  routeTree.gen.ts
apps/core/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.prod.json  tauri.conf.sidecar.json
apps/core/src-tauri/capabilities/: main.json  migrated.json
apps/core/src-tauri/icons/: icon.icns
apps/core/src-tauri/src/: cli.rs  connection.rs  main.rs  row.rs  shortcut.rs  state.rs  table.rs  updater.rs  utils.rs
apps/core/src-tauri/src/commands/: connection.rs  fs.rs  mod.rs  row.rs  table.rs
apps/core/src-tauri/src/drivers/mysql/: connection.rs  row.rs  table.rs
apps/core/src-tauri/src/drivers/postgres/: connection.rs  mod.rs  row.rs  table.rs
apps/core/src-tauri/src/drivers/sqlite/: connection.rs  decode.rs  row.rs  table.rs
apps/core/src/app/: globals.css  layout.tsx  page.tsx
apps/core/src/commands/: columns.ts  row.ts  (+1 more)
apps/desktop/: CHANGELOG.md  components.json  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: bindings.ts  index.css  main.tsx  routeTree.gen.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.prod.json
apps/react-front/: .eslintrc.cjs  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/react-front/public/: splashscreen.html
apps/react-front/src/: index.css  main.tsx
apps/scripts/: suffex-meta-x.go
apps/web/: .eslintrc.cjs  .gitignore  CHANGELOG.md  astro.config.mjs  components.json  ec.config.mjs  eslint.config.js  index.html  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web-astro/: astro.config.mjs  package.json  tsconfig.json
apps/web/src/: App.tsx  content.config.ts  env.d.ts  index.css
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/commands/: Cargo.toml
crates/commands/src/: connection.rs  lib.rs  row.rs  table.rs
crates/handlers/: Cargo.toml
crates/handlers/src/: database.rs  db_schema.rs  handler.rs  lib.rs  mysql.rs  postgres.rs  query.rs  schema.rs  shared_queries.rs  sqlite.rs  types.rs
crates/handlers/src/mysql/: mod.rs
crates/handlers/src/postgres/: mod.rs
crates/handlers/src/sqlite/: mod.rs
crates/keybindings/: Cargo.toml
crates/keybindings/src/: default.rs  fs.rs  lib.rs  schema.rs
crates/lib/: Cargo.toml
crates/lib/src/: decode.rs  error.rs  events.rs  fs.rs  handler.rs  lib.rs  state.rs  types.rs
crates/lib/src/decode/: mod.rs
crates/mysql/: Cargo.toml
crates/mysql/src/: connection.rs  row.rs  table.rs
crates/postgres/: Cargo.toml
crates/postgres/src/: connection.rs  decode.rs  row.rs  table.rs
crates/settings/: Cargo.toml  schema.json
crates/settings/src/: default.rs  fs.rs  lib.rs  schema.rs
crates/sqlite/: Cargo.toml
crates/sqlite/src/: connection.rs  row.rs  table.rs
crates/tx-handlers/: Cargo.toml
crates/tx-handlers/src/: database.rs  lib.rs  mysql.rs  postgres.rs  query.rs  schema.rs  sqlite.rs
crates/tx-keybindings/: Cargo.toml
crates/tx-keybindings/src/: fs.rs  schema.rs
crates/tx-lib/: Cargo.toml
crates/tx-lib/src/: error.rs  events.rs  fs.rs  types.rs
crates/tx-settings/: Cargo.toml  schema.json
crates/tx-settings/src/: fs.rs  lib.rs  main.rs  schema.rs
docs/: CLI.md  CONTRIBUTING.md
scripts/: prepare_metax.ps1  prepare_metax.sh  suffex_metax.ps1  suffex_metax.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: common.rs  connection.rs  lib.rs  main.rs  row.rs  sqlite.rs  table.rs  utils.rs
src-tauri/src/drivers/: mod.rs  sqlite.rs
src-tauri/src/drivers/mysql/: connection.rs  decode.rs  row.rs  table.rs
src-tauri/src/drivers/postgres/: row.rs
src-tauri/src/drivers/sqlite/: decode.rs
src/app/: actions.ts  globals.css  layout.tsx  page.tsx
src/app/(splash)/: page.tsx
src/app/_actions/: actions.ts
src/app/connect/: actions.ts  page.tsx
src/app/connections/: actions.ts  page.tsx
src/app/dashboard/: actions.ts  layout.tsx  page.tsx
src/components/: create_connection_btn.tsx
src/components/providers/: theme-provider.tsx
src/components/ui/: command.tsx  context-menu.tsx  dialog.tsx  form.tsx  radio-group.tsx  sheet.tsx  table.tsx
src/lib/: providers.tsx  types.ts  utils.ts
(+444 files in other folders)
