[workspace]

members = ["crates/*", "apps/core/src-tauri"]
resolver = "2"

[workspace.package]
description = "Table Viewer for modern developers"
version = "0.3.4"
license = "MIT"
authors = ["Kareem Ebrahim <kareemmahlees@gmail.com>"]
repository = "https://github.com/kareemmahlees/tablex"
rust-version = "1.60"
edition = "2021"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[workspace.dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
# sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "any", "time"] }
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-native-tls",
    "any",
    "sqlite",
    "postgres",
    "mysql",
    "chrono",
    "time",
] }
async-trait = "0.1.80"
specta = "1"
