[workspace]

members = ["crates/*", "apps/core/src-tauri"]
resolver = "2"

[workspace.package]
description = "Table Viewer for modern developers"
version = "0.3.9"
license = "MIT"
authors = ["Kareem Ebrahim <kareemmahlees@gmail.com>"]
repository = "https://github.com/kareemmahlees/tablex"
rust-version = "1.60"
edition = "2021"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[workspace.dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.0.0-rc.6" }

sqlx = { version = "0.6.3", features = [
    "runtime-tokio-native-tls",
    "any",
    "sqlite",
    "postgres",
    "mysql",
    "chrono",
    "time",
] }
async-trait = "0.1.80"
specta = { version = "2.0.0-rc.20", features = ["serde", "serde_json"] }
tauri-specta = { version = "2.0.0-rc.19", features = ["derive", "typescript"] }
log = { version = "0.4.22" }
