[workspace]

members = ["crates/*", "apps/desktop/src-tauri"]
resolver = "2"

[workspace.package]
description = "Table Viewer for modern developers"
version = "0.3.9"
license = "MIT"
authors = ["Kareem Ebrahim <kareemmahlees@gmail.com>"]
repository = "https://github.com/kareemmahlees/tablex"
rust-version = "1.88"
edition = "2024"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[workspace.dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.5.1" }

sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "any",
    "sqlite",
    "postgres",
    "mysql",
    "chrono",
] }
sea-schema = { version = "0.16.0", features = [
    "sqlx-all",
    "with-serde",
    "discovery",
    "runtime-tokio-native-tls",
], default-features = false }
sea-query-binder = { version = "0.7.0", features = [
    "with-json",
    "with-chrono",
    "with-uuid",
] }
sea-query = { version = "0.32.6", features = [
    "with-json",
    "with-chrono",
    "with-uuid",
] }
async-trait = "0.1.80"
specta = { version = "2.0.0-rc.20", features = ["serde", "serde_json"] }
tauri-specta = { version = "2.0.0-rc.17", features = ["derive", "typescript"] }
log = { version = "0.4.22" }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
sqlparser = "0.58.0"
