[package]
name = "table_x"
version = "0.1.0"
description = "Table Viewer for modern developers"
authors = ["Kareem Ebrahim"]
license = "MIT"
repository = "https://github.com/kareemmahlees/tablex"
default-run = "table_x"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = ["dialog-open"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls" ,"sqlite", "postgres", "mysql"] }
uuid = {version = "1.6.1",features = ["v4", "fast-rng", "macro-diagnostics"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
