[package]
name = "tx_cli"
description.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
tauri = { workspace = true }

[target."cfg(windows)".dependencies]
windows = { version = "0.54.0", features = ["Win32_System_Console", "Win32_Foundation"] }