[package]
name = "tx_commands"
description.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
tx_lib = {path = "../lib"}
tauri = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }