[package]
name = "tx_handlers"
description.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sqlx = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tx_lib = { path = "../lib" }
