[package]
name = "tx_keybindings"
description.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
specta = { workspace = true }
tauri-specta = { workspace = true }
tauri = { workspace = true }
tx_lib = { path = "../lib" }
