[package]
name = "tx_keybindings"
description = "TableX Keybindings for handling keyboard shortcuts"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
specta = { workspace = true }
tauri-specta = { workspace = true }
tauri = { workspace = true }
log = { workspace = true }
tx_lib = { path = "../lib" }
