[package]
name = "tx_lib"
description.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
sqlx = { workspace = true }
async-trait = { workspace = true }
specta = { workspace = true }
tauri-specta = { workspace = true }
chrono = "0.4.38"
