[package]
name = "tx_lib"
description = "TableX Lib for handling common/shared logic"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tauri = { workspace = true }
async-trait = { workspace = true }
specta = { workspace = true }
tauri-specta = { workspace = true }
chrono = "0.4.38"
thiserror = "1.0.63"
log = { workspace = true }
