[package]
name = "postgres"
description.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tx_lib = { path = "../lib" }
tauri = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }