[package]
name = "tx_settings"
description = "TableX Settings for managing configurable user settings"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
schemars = { version = "0.8.21", features = ["preserve_order"] }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
tauri = { workspace = true }
tx_lib = { path = "../lib" }
log = { workspace = true }
