[package]
name = "tx_handlers"
description.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sqlx = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
tx_lib = { path = "../tx-lib" }
home = "0.5.9"
sea-query-binder = { workspace = true }
sea-schema = { workspace = true }
sea-query = { workspace = true }
uuid = { workspace = true }
chrono = "0.4.38"
